# swapi-exercise

./: .example.env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tasks.py
backend/apps/swapi/: admin.py  api_client.py  apps.py  data_handler.py  downloader.py  models.py  urls.py  views.py
backend/apps/swapi/migrations/: 0001_initial.py
backend/apps/swapi/templates/: base.html
backend/apps/swapi/templates/swapi/: aggregate.html  download_list.html  people.html
backend/apps/swapi/templates/swapi/fragments/: table.html
backend/backend/: settings.py  urls.py
