[tool.poetry]
name = "code"
version = "0.1.0"
description = ""
authors = ["Maciej Jaworski <maciej@jaworski.co>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.7"
petl = "^1.7.2"
requests = "^2.25.1"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
invoke = "^1.5.0"
isort = "^5.7.0"
ipython = "^7.21.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  | snapshots
)/
'''
